--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,6 @@
 {
     "java.project.referencedLibraries": [
         "lib/**/*.jar",
-        "c:\\Users\\AaronSM\\Downloads\\mysql-connector-java-5.1.49.jar"
+        "c:\\Users\\csiba\\Downloads\\mysql-connector-java-5.1.49.jar"
     ]
 }
